--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -2,16 +2,16 @@
 spatial_resolution: 0.5
 
 # Path towards the various input data.
-path_resource_data: '../input_data/resource_data'
-path_transfer_function_data: '../input_data/transfer_functions'
-path_population_density_data: '../input_data/population_density'
-path_protected_areas_data: '../input_data/protected_areas'
-path_land_data: '../input_data/land_data'
-path_load_data: '../input_data/load_data'
-path_transmission_data: '../input_data/transmission_data'
-path_potential_data: '../input_data/potentials'
-path_legacy_data : '../input_data/legacy'
-path_shapefile_data: '../input_data/shapefiles'
+path_resource_data: '../../../data/resource'
+path_transfer_function_data: '../../../data/transfer_functions'
+path_population_density_data: '../../../data/population_density'
+path_protected_areas_data: '../../../data/protected_areas'
+path_land_data: '../../../data/land_data'
+path_load_data: '../../../data/load/generated'
+path_transmission_data: '../../../data/transmission_data'
+path_potential_data: '../../../data/res_potential/source/ENSPRESO'
+path_legacy_data : '../../../data/legacy'
+path_shapefile_data: '../../../data/shapefiles'
 
 # Various data layers to be taken into account in potential site selection.
 resource_quality_layer: True
