--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -9,9 +9,9 @@ bathymetry_layer: True
 orography_layer: True
 forestry_layer: True
 water_mask_layer: True
-legacy_layer: True
+legacy_layer: False
 
-time_slice: ['2015-01-01T00:00', '2015-01-01T12:00']
+time_slice: ['2015-01-01T00:00', '2015-01-12T12:00']
 regions: ['BE']
 technologies: ['wind_onshore', 'wind_offshore', 'solar_utility', 'solar_residential']
 
@@ -19,10 +19,10 @@ technologies: ['wind_onshore', 'wind_offshore', 'solar_utility', 'solar_resident
 solver: 'gurobi'
 
 # Type of problem to be solved. Check models.py for a full list.
-formulation: 'meet_demand_with_capacity' # 'meet_RES_targets_hourly', 'meet_RES_targets_year_round'
+formulation: 'meet_RES_targets_year_round' # 'meet_demand_with_capacity' # 'meet_RES_targets_hourly'
 
 # List of deployments per region (ordered as the 'regions' list above)
-deployment_vector: [1.0, 2.5, 2.0, 15.0]
+deployment_vector: [0.1] # [1.0, 2.5, 2.0, 15.0]
 
 # Keeping files at the end of the run.
 keep_files: False
