--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -34,4 +34,4 @@ formulation: 'meet_RES_targets_year_round' # 'meet_RES_targets_hourly' # 'meet_d
 deployment_vector: [0.1] # [0.5, 0.5, 0.5, 0.5]
 
 # Keeping files at the end of the run.
-keep_files: True
+keep_files: False
