--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -15,7 +15,7 @@ timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
 regions: ['EU']
 technologies: ['wind_onshore', 'wind_offshore', 'pv_utility', 'pv_residential']
 
-use_ex_cap: True
+use_ex_cap: False
 
 modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
 solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
@@ -28,10 +28,10 @@ solver_options:
 write_lp: True
 
 # Type of problem to be solved. Check resite.py for a full list.
-formulation: 'meet_RES_targets_year_round' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
+formulation: 'meet_RES_targets_hourly' # 'meet_RES_targets_year_round' # 'meet_demand_with_capacity' #
 
 # List of deployments per region (ordered as the 'regions' list above)
-deployment_vector: [0.8] # [0.5, 0.5, 0.5, 0.5]
+deployment_vector: [0.5] # [0.5, 0.5, 0.5, 0.5]
 
 # Keeping files at the end of the run.
 keep_files: True
