--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -5,7 +5,7 @@ solver:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
+  slice: ['2015-01-01T00:00', '2015-02-01T23:00']
   resolution: 1
 
 # Space
@@ -15,14 +15,14 @@ add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES
 # RES
 res:
   include: True
-  strategy: "bus" # (max or comp) or bus or no_siting or siting
+  strategy: "max" # (max or comp) or bus or no_siting or siting
 
   # For strategy = max or comp
   resite_nb: 100 # can be multiples of 25
   area_per_site: 2500 #km2
   cap_dens:
-    wind: ""  # GW/km2
-    pv: ""  # GW/km2
+    wind_onshore: ""  # GW/km2
+    pv_utility: ""  # GW/km2
 
   # For strategy = full or generate
   # Various data layers to be taken into account in potential site selection.
