--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -14,7 +14,7 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-31T23:00']
   resolution: 1
 
 # Space
@@ -23,7 +23,7 @@ add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES
 
 # RES
 res:
-  include: False
+  include: True
   strategy: "siting" # (max or comp) or bus or no_siting or siting
 
   # For strategy = max or comp
@@ -49,8 +49,8 @@ res:
     water_mask: True
 
   # For strategy = generate
-  modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
-  solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
+  modelling: 'docplex' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
+  solver: 'cplex' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
   solver_options:
     gurobi:
       Threads: 0
@@ -103,6 +103,5 @@ sto:
 
 # Emissions
 co2_emissions:
-  global_per_year: 1360 #Mt/year
-  level_1990: 523.6 # t/GWh
-  reduc_from_1990: 0.4 #%
+  reference_year: 1990 # The only available point now.
+  mitigation_factor: 0.6
