--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -23,8 +23,8 @@ add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES
 
 # RES
 res:
-  include: False
-  strategy: "siting" # (max or comp) or bus or no_siting or siting
+  include: True
+  strategy: "bus" # (max or comp) or bus or no_siting or siting
 
   # For strategy = max or comp
   resite_nb: 100 # can be multiples of 25
