--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -14,17 +14,17 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-31T23:00']
+  slice: ['2015-01-01T00:00', '2015-12-31T23:00']
   resolution: 1
 
 # Space
-region: "CWE"
+region: "EU"
 add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
 res:
   include: True
-  strategy: "bus" # (max or comp) or bus or no_siting or siting
+  strategy: "siting" # (max or comp) or bus or no_siting or siting
 
   # For strategy = max or comp
   resite_nb: 100 # can be multiples of 25
@@ -62,7 +62,7 @@ res:
   # Type of problem to be solved. Check resite.py for a full list.
   formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
   # List of deployments per region (ordered as the 'regions' list above)
-  deployment_vector: [0.8] # [0.5, 0.5, 0.5, 0.5]
+  deployment_vector: [0.5] # [0.5, 0.5, 0.5, 0.5]
   # Keeping files at the end of the run.
   keep_files: False
 
@@ -104,4 +104,4 @@ sto:
 # Emissions
 co2_emissions:
   reference_year: 1990 # The only available point now.
-  mitigation_factor: 0.6
+  mitigation_factor: 0.8
