--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -6,8 +6,7 @@ solver_options:
     Method: 2
     BarHomogeneous: 1
     Crossover: 0
-    FeasibilityTol: 0.0001
-    OptimalityTol: 0.0001
+    BarConvTol: 0.0001
   cplex:
     solutiontype: 1
 
