--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -13,7 +13,7 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-12-31T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
   resolution: 1
 
 # Space
@@ -23,7 +23,7 @@ add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES
 # RES
 res:
   include: True
-  strategy: "siting" # (max or comp) or bus or no_siting or siting
+  strategy: "bus" # (max or comp) or bus or no_siting or siting
 
   # For strategy = max or comp
   resite_nb: 100 # can be multiples of 25
