--- a/src/resite/config_model.yml
+++ b/src/resite/config_model.yml
@@ -12,7 +12,7 @@ filtering_layers:
   water_mask: True
 
 timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
-regions: ['CWE']
+regions: ['BENELUX']
 technologies: ['wind_onshore', 'wind_offshore', 'pv_utility', 'pv_residential']
 
 use_ex_cap: False
@@ -31,7 +31,7 @@ write_lp: True
 formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_RES_targets_agg' # 'meet_demand_with_capacity' #
 
 # List of deployments per region (ordered as the 'regions' list above)
-deployment_vector: [0.9] # [0.5, 0.5, 0.5, 0.5]
+deployment_vector: [0.5] # [0.5, 0.5, 0.5, 0.5]
 
 # Keeping files at the end of the run.
 keep_files: True
