--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -23,7 +23,7 @@ add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES
 # RES
 res:
   include: True
-  strategy: "bus" # (max or comp) or bus or no_siting or siting
+  strategy: "siting" # (max or comp) or bus or no_siting or siting
 
   # For strategy = max or comp
   resite_nb: 100 # can be multiples of 25
@@ -58,6 +58,7 @@ res:
       solutiontype: 1
     cbc: 0
   write_lp: False
+  write_log: False
   # Type of problem to be solved. Check resite.py for a full list.
   formulation: 'meet_RES_targets_agg' # 'meet_RES_targets_hourly' # 'meet_demand_with_capacity' #
   # List of deployments per region (ordered as the 'regions' list above)
