--- a/src/sizing/e-highway/config.yaml
+++ b/src/sizing/e-highway/config.yaml
@@ -17,7 +17,7 @@ time:
   resolution: 1
 
 # Space
-region: "BENELUX"
+region: "EU"
 add_offshore: True # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
