--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -13,11 +13,11 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2017-01-01T00:00', '2017-01-01T23:00']
+  slice: ['2015-01-01T00:00', '2015-01-01T23:00']
   resolution: 1
 
 # Space
-region: "EU"
+region: "CWE"
 add_offshore: False # ! if False, remove wind_offshore and wind_floating from RES technologies
 
 # RES
